src/sync/snapshots/ozen__sync__status__tests__status_alone_on_the_relay.snap
---
source: src/sync/status_tests.rs
expression: v
---
{
  "error": null,
  "lan_only": false,
  "macs": [],
  "other_macs_online": 0,
  "progress": null,
  "relay": {
    "connected": true,
    "error": null,
    "online": 1,
    "refused": false
  },
  "running": true,
  "sync": "on"
}
