src/sync/snapshots/ozen__sync__status__tests__status_lan_only.snap
---
source: src/sync/status_tests.rs
expression: v
---
{
  "error": null,
  "lan_only": true,
  "macs": [],
  "other_macs_online": null,
  "progress": null,
  "relay": null,
  "running": true,
  "sync": "on"
}
