src/sync/snapshots/ozen__sync__status__tests__status_runner_error.snap
---
source: src/sync/status_tests.rs
expression: v
---
{
  "error": "Local Network access is off",
  "lan_only": false,
  "macs": [],
  "other_macs_online": null,
  "progress": null,
  "relay": null,
  "running": false,
  "sync": "on"
}
