src/sync/snapshots/ozen__sync__status__tests__status_when_sync_was_never_set_up.snap
---
source: src/sync/status_tests.rs
expression: "at(d.path(), || status_at(NOW))"
---
{
  "macs": [],
  "other_macs_online": null,
  "relay": null,
  "running": false,
  "sync": "off"
}
